# AutoMashupper

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: build-win.yml  build.yml  test-win.yml  test.yml
auto_mashupper/: __init__.py  cli.py  mashability.py  segmentation.py  utilities.py  utilities_pyrb.py
scripts/: README.md  audascript.py
tests/: __init__.py  conftest.py  test_basic.py  test_cli.py  test_mashability.py  test_utilities.py
